<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaActivity">

    <ImageView
        android:id="@+id/pizzaImage"
        android:layout_width="229dp"
        android:layout_height="213dp"
        android:contentDescription="@string/deluxe_pizza"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/sizeSpinner"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/deluxe" />

    <TextView
        android:id="@+id/chooseSize"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/choose_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/sizeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:entries="@array/Sizes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="95dp"
        android:layout_height="27dp"
        android:text="@string/toppings"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

    <CheckBox
        android:id="@+id/beef"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:checked="false"
        android:onClick="beefClick"
        android:text="@string/beef"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/chicken"
        android:layout_width="128dp"
        android:layout_height="57dp"
        android:onClick="chickenClick"
        android:text="@string/chicken"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toEndOf="@+id/beef"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/ham"
        android:layout_width="127dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:onClick="hamClick"
        android:text="@string/ham"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/chicken"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/sausage"
        android:layout_width="135dp"
        android:layout_height="59dp"
        android:onClick="sausageClick"
        android:text="@string/sausage"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beef"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/pepperoni"
        android:layout_width="174dp"
        android:layout_height="59dp"
        android:onClick="pepperoniClick"
        android:text="@string/pepperoni"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sausage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/add_pizza_button"
        android:layout_width="381dp"
        android:layout_height="68dp"
        android:background="#C80000"
        android:onClick="addClick"
        android:text="@string/add_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meat_toppings"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nonmeat_toppings"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <CheckBox
        android:id="@+id/g_pepper"
        android:layout_width="179dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:onClick="gpepperClick"
        android:text="@string/greenpepper"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/mushroom"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:onClick="mushroomClick"
        android:text="@string/mushroom"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/g_pepper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/bl_olives"
        android:layout_width="157dp"
        android:layout_height="62dp"
        android:onClick="blolivesClick"
        android:text="@string/blackolives"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/onion"
        android:layout_width="123dp"
        android:layout_height="53dp"
        android:onClick="onionClick"
        android:text="@string/onion"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/pineapple"
        android:layout_width="142dp"
        android:layout_height="59dp"
        android:layout_marginStart="4dp"
        android:onClick="pineappleClick"
        android:text="@string/pineapple"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bl_olives"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/cheese"
        android:layout_width="169dp"
        android:layout_height="52dp"
        android:onClick="cheeseClick"
        android:text="@string/cheese"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/onion"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836"
        tools:ignore="UsingOnClickInXml" />

    <EditText
        android:id="@+id/priceAmt"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="50dp"
        android:layout_height="23dp"
        android:text="@string/price"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/test"
        android:layout_width="1dp"
        android:layout_height="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>